--- a/notebooks/Ch06_Analyzing_Bike_Sharing_Trends/linear_regression.ipynb
+++ b/notebooks/Ch06_Analyzing_Bike_Sharing_Trends/linear_regression.ipynb
@@ -195,7 +195,7 @@
     "    feature_labels = [col_name+'_'+str(cls_label) for cls_label in le.classes_]\n",
     "    features_df = pd.DataFrame(feature_arr, columns=feature_labels)\n",
     "    \n",
-    "    return le,ohe,features_df\n",
+    "    return le, ohe, features_df\n",
     "\n",
     "# given label encoder and one hot encoder objects, \n",
     "# encode attribute to ohe\n",
@@ -322,7 +322,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['label_enc', 'ohe_enc', 'feature_df', 'col_name'])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_attr_list[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +368,502 @@
     "\n",
     "train_df_new = pd.concat(feature_df_list, axis=1)\n",
     "print(\"Shape::{}\".format(train_df_new.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>rec_id</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>season</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>is_holiday</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>is_workingday</th>\n",
+       "      <th>weather_condition</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5749</td>\n",
+       "      <td>5750</td>\n",
+       "      <td>2011-09-02</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.6061</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.1940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1843</td>\n",
+       "      <td>1844</td>\n",
+       "      <td>2011-03-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.4848</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.2239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13855</td>\n",
+       "      <td>13856</td>\n",
+       "      <td>2012-08-05</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.8030</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.5224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9723</td>\n",
+       "      <td>9724</td>\n",
+       "      <td>2012-02-15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.3333</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10981</td>\n",
+       "      <td>10982</td>\n",
+       "      <td>2012-04-07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.5152</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.4179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11638</th>\n",
+       "      <td>11284</td>\n",
+       "      <td>11285</td>\n",
+       "      <td>2012-04-20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.4545</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.0896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11639</th>\n",
+       "      <td>11964</td>\n",
+       "      <td>11965</td>\n",
+       "      <td>2012-05-18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.6212</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.1343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11640</th>\n",
+       "      <td>5390</td>\n",
+       "      <td>5391</td>\n",
+       "      <td>2011-08-17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.7273</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.2836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11641</th>\n",
+       "      <td>860</td>\n",
+       "      <td>861</td>\n",
+       "      <td>2011-02-08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.1970</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.4179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11642</th>\n",
+       "      <td>15795</td>\n",
+       "      <td>15796</td>\n",
+       "      <td>2012-10-25</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.5000</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.1642</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11643 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index  rec_id   datetime season year month hour is_holiday weekday   \n",
+       "0       5749    5750 2011-09-02      3    0     9    0          0       5  \\\n",
+       "1       1843    1844 2011-03-22      2    0     3   13          0       2   \n",
+       "2      13855   13856 2012-08-05      3    1     8   12          0       0   \n",
+       "3       9723    9724 2012-02-15      1    1     2    2          0       3   \n",
+       "4      10981   10982 2012-04-07      2    1     4   17          0       6   \n",
+       "...      ...     ...        ...    ...  ...   ...  ...        ...     ...   \n",
+       "11638  11284   11285 2012-04-20      2    1     4    9          0       5   \n",
+       "11639  11964   11965 2012-05-18      2    1     5   17          0       5   \n",
+       "11640   5390    5391 2011-08-17      3    0     8   12          0       3   \n",
+       "11641    860     861 2011-02-08      1    0     2    7          0       2   \n",
+       "11642  15795   15796 2012-10-25      4    1    10    8          0       4   \n",
+       "\n",
+       "      is_workingday weather_condition  temp   atemp  humidity  windspeed  \n",
+       "0                 1                 1  0.64  0.6061      0.65     0.1940  \n",
+       "1                 1                 1  0.50  0.4848      0.45     0.2239  \n",
+       "2                 0                 1  0.86  0.8030      0.47     0.5224  \n",
+       "3                 1                 1  0.30  0.3333      0.61     0.0000  \n",
+       "4                 0                 1  0.54  0.5152      0.19     0.4179  \n",
+       "...             ...               ...   ...     ...       ...        ...  \n",
+       "11638             1                 1  0.46  0.4545      0.88     0.0896  \n",
+       "11639             1                 1  0.66  0.6212      0.34     0.1343  \n",
+       "11640             1                 1  0.80  0.7273      0.43     0.2836  \n",
+       "11641             1                 1  0.24  0.1970      0.65     0.4179  \n",
+       "11642             1                 2  0.52  0.5000      0.83     0.1642  \n",
+       "\n",
+       "[11643 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "ct_obj = ColumnTransformer([\n",
+    "    (\"a\", preprocessing.OneHotEncoder(), subset_cat_features),\n",
+    "    (\"b\", preprocessing.MinMaxScaler(), numeric_feature_cols)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(numeric_feature_cols) + len(subset_cat_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11643, 19)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_new = ct_obj.fit_transform(X)\n",
+    "X_new.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5736, 19)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_new_test = ct_obj.transform(X_test)\n",
+    "X_new_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression as LR\n",
+    "from sklearn.feature_selection import RFECV\n",
+    "\n",
+    "pipe = Pipeline([\n",
+    "    (\"fs\", RFECV()),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('svc', SVC()),\n",
+    "    (\"reg\", LR()),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>documents</th>\n",
+       "      <th>width</th>\n",
+       "      <th>rr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>First</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>second</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>First</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  documents  width  rr\n",
+       "0     First      3   3\n",
+       "1    second      4   2\n",
+       "2     First      5   1"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = pd.DataFrame({\n",
+    "    \"documents\": [\"First\", \"second\", \"First\"],\n",
+    "    \"width\": [3, 4, 5], \n",
+    "    \"rr\": [3, 2, 1]})\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 0. , 0. , 1. ],\n",
+       "       [0. , 1. , 0.5, 0.5],\n",
+       "       [1. , 0. , 1. , 0. ]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction import FeatureHasher\n",
+    "\n",
+    "ct = ColumnTransformer(\n",
+    "     [(\"text_preprocess\", preprocessing.OneHotEncoder(), [\"documents\"]),\n",
+    "      (\"num_preprocess\", preprocessing.MinMaxScaler(), [\"width\", \"rr\"])], \n",
+    "      sparse_threshold=0)\n",
+    "X_trans = ct.fit_transform(f) \n",
+    "X_trans"
    ]
   },
   {
