--- a/DeepLOB/ML_course.ipynb
+++ b/DeepLOB/ML_course.ipynb
@@ -446,7 +446,7 @@
     "        std_col = \"Std\" + col\n",
     "        z_score_col = \"Zscore\" + col\n",
     "        data[[mu_col, std_col]] = col_lst_mean_std\n",
-    "        data[[mu_col, std_col]] = data[[mu_col, std_col]].shift(-1)\n",
+    "        data[[mu_col, std_col]] = data[[mu_col, std_col]].index.shift(-1, freq='D')\n",
     "        data[z_score_col] = (data[col] - data[mu_col]) / data[std_col]\n",
     "        z_score_cols.append(z_score_col)\n",
     "    data[\"ConcatLOB\"] = data[z_score_cols].apply(lambda x: np.concatenate(x.values), axis=1)\n"
