add some comments

--- a/DeepLOB/ML_course.ipynb
+++ b/DeepLOB/ML_course.ipynb
@@ -104,6 +104,128 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function cleans a given Pandas DataFrame containing limit order book (LOB) data. The input parameters are data, which is the Pandas DataFrame, cols_need, which are the columns of the DataFrame to keep, and cols_check, which are the columns to check for the specified number of levels (num_level). The function iterates through the rows of the DataFrame, checks if the specified columns have data and the correct number of levels, calculates the mid price for each valid row, and returns a new DataFrame with the valid samples and the specified columns, including the calculated mid prices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the required library\n",
+    "import pandas as pd\n",
+    "\n",
+    "def clean_lob(data, cols_need, cols_check, weight_mid_price=0.5, num_level=10):\n",
+    "    # Initialize lists to store valid sample indices and mid prices\n",
+    "    lst_valid_samples = []\n",
+    "    mid_prices = []\n",
+    "\n",
+    "    # Iterate through the rows of the input DataFrame\n",
+    "    for ind, row in data.iterrows():\n",
+    "        # Check if both columns in cols_check have data\n",
+    "        if len(row[cols_check[0]]) and len(row[cols_check[1]]):\n",
+    "            # Check if both columns have the specified number of levels\n",
+    "            if (row[cols_check[0]].shape[0] == num_level) and (row[cols_check[1]].shape[0] == num_level):\n",
+    "                # Add the index to the list of valid samples\n",
+    "                lst_valid_samples.append(ind)\n",
+    "\n",
+    "                # Calculate the mid price for the current row\n",
+    "                mid_p = weight_mid_price * row[cols_check[0]][0] + (1 - weight_mid_price) * row[cols_check[1]][0]\n",
+    "                mid_prices.append(mid_p)\n",
+    "\n",
+    "    # Create a new DataFrame with the valid samples and the specified columns\n",
+    "    ret_data = pd.DataFrame(index=lst_valid_samples, data=data.loc[lst_valid_samples, cols_need])\n",
+    "\n",
+    "    # Add the mid prices to the new DataFrame\n",
+    "    ret_data[\"Midprice\"] = mid_prices\n",
+    "\n",
+    "    # Return the cleaned DataFrame\n",
+    "    return ret_data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function normalizes specified columns of a given Pandas DataFrame using the z-score method. The input parameters are data, which is the Pandas DataFrame, and cols_need, which are the columns of the DataFrame that need normalization. The function calculates rolling statistics for each column, computes the z-score for each value, and returns a new DataFrame with the z-score columns along with a list of the z-score column names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_func(a):\n",
+    "    all_items = np.concatenate(a.values)\n",
+    "    return np.mean(all_items), np.std(all_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the required library\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def zscore_normalization(data, cols_need, freq=\"5H\", min_periods=4*12*60):\n",
+    "    # Initialize lists to store z-score column names and statistical data\n",
+    "    z_score_cols, stat_data = [], []\n",
+    "\n",
+    "    # Iterate through the columns that need normalization\n",
+    "    for col in cols_need:\n",
+    "        # Calculate rolling statistics for the current column\n",
+    "        rolling_col = data[col].rolling(window=freq, min_periods=min_periods)\n",
+    "        col_lst_mean_std = [my_func(a) for a in rolling_col]\n",
+    "\n",
+    "        # Create column names for mean, standard deviation, and z-score\n",
+    "        mu_col = \"Mu\" + col\n",
+    "        std_col = \"Std\" + col\n",
+    "        z_score_col = \"Zscore\" + col\n",
+    "\n",
+    "        # Create a temporary DataFrame with mean and standard deviation columns\n",
+    "        tmp_data = pd.DataFrame(data=col_lst_mean_std, columns=[mu_col, std_col], index=data.index)\n",
+    "        tmp_data.index = tmp_data.index.shift(1, freq=\"H\")\n",
+    "\n",
+    "        # Intersect the indices of the original data and the temporary DataFrame\n",
+    "        idx_intersect = list(set(tmp_data.index).intersection(set(data.index)))\n",
+    "\n",
+    "        # Add the original column to the temporary DataFrame and fill with NaN values\n",
+    "        tmp_data[col] = np.nan\n",
+    "        tmp_data.loc[idx_intersect, col] = data.loc[idx_intersect, col]\n",
+    "\n",
+    "        # Drop rows with NaN values\n",
+    "        tmp_data = tmp_data.dropna()\n",
+    "\n",
+    "        # Calculate the z-score for each value in the column\n",
+    "        tmp_data[z_score_col] = (tmp_data[col] - tmp_data[mu_col]) / tmp_data[std_col]\n",
+    "\n",
+    "        # Keep only the z-score column in the temporary DataFrame\n",
+    "        tmp_data = tmp_data[[z_score_col]]\n",
+    "\n",
+    "        # Append the temporary DataFrame to the list of statistical data\n",
+    "        stat_data.append(tmp_data)\n",
+    "\n",
+    "        # Append the z-score column name to the list of z-score column names\n",
+    "        z_score_cols.append(z_score_col)\n",
+    "\n",
+    "    # Concatenate the statistical data DataFrames along the columns axis\n",
+    "    ret_data = pd.concat(stat_data, axis=1)\n",
+    "\n",
+    "    # Return the list of z-score column names and the concatenated DataFrame\n",
+    "    return z_score_cols, ret_data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
