--- a/DeepLOB/ML_course.ipynb
+++ b/DeepLOB/ML_course.ipynb
@@ -3004,6 +3004,241 @@
     "        sample = X[i: i+100]\n",
     "        ..."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deep Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load packages\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import keras\n",
+    "import tensorflow as tf\n",
+    "from keras import backend as K\n",
+    "from keras.models import load_model, Model\n",
+    "from keras.layers import Flatten, Dense, Dropout, Activation, Input, LSTM, Reshape, Conv2D, MaxPooling2D\n",
+    "# from keras.optimizers import Adam\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from keras.layers import LeakyReLU\n",
+    "from keras.utils import np_utils\n",
+    "\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# set random seeds\n",
+    "np.random.seed(1)\n",
+    "tf.random.set_seed(2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_deeplob(T=100, NF=40, number_of_lstm=64):\n",
+    "    input_lmd = Input(shape=(T, NF, 1))\n",
+    "    \n",
+    "    # build the convolutional block\n",
+    "    conv_first1 = Conv2D(16, (1, 2), strides=(1, 2))(input_lmd)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    conv_first1 = Conv2D(16, (4, 1), padding='same')(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    conv_first1 = Conv2D(16, (4, 1), padding='same')(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "\n",
+    "    conv_first1 = Conv2D(16, (1, 2), strides=(1, 2))(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    conv_first1 = Conv2D(16, (4, 1), padding='same')(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    conv_first1 = Conv2D(16, (4, 1), padding='same')(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "\n",
+    "    conv_first1 = Conv2D(16, (1, 10))(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    conv_first1 = Conv2D(16, (4, 1), padding='same')(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    conv_first1 = Conv2D(16, (4, 1), padding='same')(conv_first1)\n",
+    "    conv_first1 = keras.layers.LeakyReLU(alpha=0.01)(conv_first1)\n",
+    "    \n",
+    "    # build the inception module\n",
+    "    convsecond_1 = Conv2D(32, (1, 1), padding='same')(conv_first1)\n",
+    "    convsecond_1 = keras.layers.LeakyReLU(alpha=0.01)(convsecond_1)\n",
+    "    convsecond_1 = Conv2D(32, (3, 1), padding='same')(convsecond_1)\n",
+    "    convsecond_1 = keras.layers.LeakyReLU(alpha=0.01)(convsecond_1)\n",
+    "\n",
+    "    convsecond_2 = Conv2D(32, (1, 1), padding='same')(conv_first1)\n",
+    "    convsecond_2 = keras.layers.LeakyReLU(alpha=0.01)(convsecond_2)\n",
+    "    convsecond_2 = Conv2D(32, (5, 1), padding='same')(convsecond_2)\n",
+    "    convsecond_2 = keras.layers.LeakyReLU(alpha=0.01)(convsecond_2)\n",
+    "\n",
+    "    convsecond_3 = MaxPooling2D((3, 1), strides=(1, 1), padding='same')(conv_first1)\n",
+    "    convsecond_3 = Conv2D(32, (1, 1), padding='same')(convsecond_3)\n",
+    "    convsecond_3 = keras.layers.LeakyReLU(alpha=0.01)(convsecond_3)\n",
+    "    \n",
+    "    convsecond_output = keras.layers.concatenate([convsecond_1, convsecond_2, convsecond_3], axis=3)\n",
+    "    conv_reshape = Reshape((int(convsecond_output.shape[1]), int(convsecond_output.shape[3])))(convsecond_output)\n",
+    "    conv_reshape = keras.layers.Dropout(0.2, noise_shape=(None, 1, int(conv_reshape.shape[2])))(conv_reshape, training=True)\n",
+    "\n",
+    "    # build the last LSTM layer\n",
+    "    conv_lstm = LSTM(number_of_lstm)(conv_reshape)\n",
+    "\n",
+    "    # build the output layer\n",
+    "    out = Dense(10, activation='relu')(conv_lstm)\n",
+    "    out = Dense(3, activation='softmax')(out)\n",
+    "    model = Model(inputs=input_lmd, outputs=out)\n",
+    "    adam = Adam(learning_rate=0.0001)\n",
+    "    model.compile(optimizer=adam, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_4\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " input_5 (InputLayer)           [(None, 100, 40, 1)  0           []                               \n",
+      "                                ]                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_56 (Conv2D)             (None, 100, 20, 16)  48          ['input_5[0][0]']                \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_56 (LeakyReLU)     (None, 100, 20, 16)  0           ['conv2d_56[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_57 (Conv2D)             (None, 100, 20, 16)  1040        ['leaky_re_lu_56[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_57 (LeakyReLU)     (None, 100, 20, 16)  0           ['conv2d_57[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_58 (Conv2D)             (None, 100, 20, 16)  1040        ['leaky_re_lu_57[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_58 (LeakyReLU)     (None, 100, 20, 16)  0           ['conv2d_58[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_59 (Conv2D)             (None, 100, 10, 16)  528         ['leaky_re_lu_58[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_59 (LeakyReLU)     (None, 100, 10, 16)  0           ['conv2d_59[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_60 (Conv2D)             (None, 100, 10, 16)  1040        ['leaky_re_lu_59[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_60 (LeakyReLU)     (None, 100, 10, 16)  0           ['conv2d_60[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_61 (Conv2D)             (None, 100, 10, 16)  1040        ['leaky_re_lu_60[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_61 (LeakyReLU)     (None, 100, 10, 16)  0           ['conv2d_61[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_62 (Conv2D)             (None, 100, 1, 16)   2576        ['leaky_re_lu_61[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_62 (LeakyReLU)     (None, 100, 1, 16)   0           ['conv2d_62[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_63 (Conv2D)             (None, 100, 1, 16)   1040        ['leaky_re_lu_62[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_63 (LeakyReLU)     (None, 100, 1, 16)   0           ['conv2d_63[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_64 (Conv2D)             (None, 100, 1, 16)   1040        ['leaky_re_lu_63[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_64 (LeakyReLU)     (None, 100, 1, 16)   0           ['conv2d_64[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_65 (Conv2D)             (None, 100, 1, 32)   544         ['leaky_re_lu_64[0][0]']         \n",
+      "                                                                                                  \n",
+      " conv2d_67 (Conv2D)             (None, 100, 1, 32)   544         ['leaky_re_lu_64[0][0]']         \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_65 (LeakyReLU)     (None, 100, 1, 32)   0           ['conv2d_65[0][0]']              \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_67 (LeakyReLU)     (None, 100, 1, 32)   0           ['conv2d_67[0][0]']              \n",
+      "                                                                                                  \n",
+      " max_pooling2d_4 (MaxPooling2D)  (None, 100, 1, 16)  0           ['leaky_re_lu_64[0][0]']         \n",
+      "                                                                                                  \n",
+      " conv2d_66 (Conv2D)             (None, 100, 1, 32)   3104        ['leaky_re_lu_65[0][0]']         \n",
+      "                                                                                                  \n",
+      " conv2d_68 (Conv2D)             (None, 100, 1, 32)   5152        ['leaky_re_lu_67[0][0]']         \n",
+      "                                                                                                  \n",
+      " conv2d_69 (Conv2D)             (None, 100, 1, 32)   544         ['max_pooling2d_4[0][0]']        \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_66 (LeakyReLU)     (None, 100, 1, 32)   0           ['conv2d_66[0][0]']              \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_68 (LeakyReLU)     (None, 100, 1, 32)   0           ['conv2d_68[0][0]']              \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_69 (LeakyReLU)     (None, 100, 1, 32)   0           ['conv2d_69[0][0]']              \n",
+      "                                                                                                  \n",
+      " concatenate_4 (Concatenate)    (None, 100, 1, 96)   0           ['leaky_re_lu_66[0][0]',         \n",
+      "                                                                  'leaky_re_lu_68[0][0]',         \n",
+      "                                                                  'leaky_re_lu_69[0][0]']         \n",
+      "                                                                                                  \n",
+      " reshape_4 (Reshape)            (None, 100, 96)      0           ['concatenate_4[0][0]']          \n",
+      "                                                                                                  \n",
+      " dropout_4 (Dropout)            (None, 100, 96)      0           ['reshape_4[0][0]']              \n",
+      "                                                                                                  \n",
+      " lstm_4 (LSTM)                  (None, 64)           41216       ['dropout_4[0][0]']              \n",
+      "                                                                                                  \n",
+      " dense_8 (Dense)                (None, 10)           650         ['lstm_4[0][0]']                 \n",
+      "                                                                                                  \n",
+      " dense_9 (Dense)                (None, 3)            33          ['dense_8[0][0]']                \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 61,179\n",
+      "Trainable params: 61,179\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "deeplob = create_deeplob()\n",
+    "deeplob.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_lstm = 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deeplob = create_deeplob(trainX.shape[1], trainX.shape[2], number_of_lstm)\n",
+    "deeplob.summary()"
+   ]
   }
  ],
  "metadata": {
